welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: value Yellow is not a member of object java.awt.Color
  faireV(Color.Yellow)
               ^MethodsPicture:29: error: value Red is not a member of object java.awt.Color
  faireV(Color.Red)
               ^MethodsPicture:30: error: value Blue is not a member of object java.awt.Color
  faireV(Color.Blue)
               ^MethodsPicture:31: error: not found: value COlor
  faireV(COlor.Green)
         ^